# Chicken_Disease_Classification

./: LICENSE  README.md  del.bat  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py
chicken/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  jsonpointer  pygrun
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_prepare_callbacks.ipynb  04_training.ipynb  trials.ipynb
src/cnnClassifier/components/: prepare_callbacks.py  training.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/pipeline/: stage_03_training.py
